@@ -1849,7 +1849,7 @@ static int futex_wait(u32 __user *uaddr, int fshared,
 				      CLOCK_MONOTONIC, HRTIMER_MODE_ABS);
 		hrtimer_init_sleeper(to, current);
 		hrtimer_set_expires_range_ns(&to->timer, *abs_time,
-					     current->timer_slack_ns);
+					     task_get_effective_timer_slack(current));
 	}
 
 retry:
@@ -2257,7 +2257,7 @@ static int futex_wait_requeue_pi(u32 __user *uaddr, int fshared,
 				      CLOCK_MONOTONIC, HRTIMER_MODE_ABS);
 		hrtimer_init_sleeper(to, current);
 		hrtimer_set_expires_range_ns(&to->timer, *abs_time,
-					     current->timer_slack_ns);
+					     task_get_effective_timer_slack(current));
 	}
 
 	/*
